chore: removed unused code, fixed typos and other things